--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,25 @@ a {
     display: none;
 }
 
+.highcharts-tooltip {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    font-family: Poppins, sans-serif;
+}
+.highcharts-tooltip > p {
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.05em;
+}
+.highcharts-tooltip > span {
+    color: #7a838a;
+    font-size: 14px;
+}
+
 .without-ring {
     @apply focus:ring-0 focus:ring-offset-0;
 }
